--- a/md/基础知识/08.html
+++ b/md/基础知识/08.html
@@ -29,30 +29,30 @@
     </div>
     <nav role="navigation">
         <ul class="summary">
-            <li class="header">Summary</li>
-<ul class="articles"><li class="chapter" data-level="1.1" data-path="../../index.html"><a href="../../index.html"><b>1.1.</b>介绍</a></li></ul>
-<li class="header">基础知识</li>
-<ul class="articles"><li class="chapter" data-level="2.1" data-path="01.html"><a href="01.html"><b>2.1.</b>第一章 健康管理概述</a></li>
-<li class="chapter" data-level="2.2" data-path="02.html"><a href="02.html"><b>2.2.</b>第二章 临床医学基础知识</a></li>
-<li class="chapter" data-level="2.3" data-path="03.html"><a href="03.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
-<li class="chapter" data-level="2.4" data-path="04.html"><a href="04.html"><b>2.4.</b>第四章 常见慢性病</a></li>
-<li class="chapter" data-level="2.5" data-path="05.html"><a href="05.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
-<li class="chapter" data-level="2.6" data-path="06.html"><a href="06.html"><b>2.6.</b>第六章 健康教育学</a></li>
-<li class="chapter" data-level="2.7" data-path="07.html"><a href="07.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
-<li class="chapter active" data-level="2.8" data-path="08.html"><a href="08.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
-<li class="chapter" data-level="2.9" data-path="09.html"><a href="09.html"><b>2.9.</b>第九章 心理健康</a></li>
-<li class="chapter" data-level="2.10" data-path="10.html"><a href="10.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
-<li class="chapter" data-level="2.11" data-path="11.html"><a href="11.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
-<li class="chapter" data-level="2.12" data-path="12.html"><a href="12.html"><b>2.12.</b>第十二章 健康信息学</a></li>
-<li class="chapter" data-level="2.13" data-path="13.html"><a href="13.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
-<li class="chapter" data-level="2.14" data-path="14.html"><a href="14.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
-<li class="chapter" data-level="2.15" data-path="15.html"><a href="15.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.16" data-path="16.html"><a href="16.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
-<li class="header">专业技能</li>
-<ul class="articles"><li class="chapter" data-level="3.1" data-path="../专业技能/01.html"><a href="../专业技能/01.html"><b>3.1.</b>第一章 健康监测</a></li>
-<li class="chapter" data-level="3.2" data-path="../专业技能/02.html"><a href="../专业技能/02.html"><b>3.2.</b>第二章 健康风险评估与分析</a></li>
-<li class="chapter" data-level="3.3" data-path="../专业技能/03.html"><a href="../专业技能/03.html"><b>3.3.</b>第三章 健康指导</a></li>
-<li class="chapter" data-level="3.4" data-path="../专业技能/04.html"><a href="../专业技能/04.html"><b>3.4.</b>第四章 健康危险因素干预</a></li></ul>
+            <li class="header" title="Summary">Summary</li>
+<ul class="articles"><li class="chapter" data-level="1.1" data-path="../../index.html"><a href="../../index.html" title="介绍"><b>1.1.</b>介绍</a></li></ul>
+<li class="header" title="基础知识">基础知识</li>
+<ul class="articles"><li class="chapter" data-level="2.1" data-path="01.html"><a href="01.html" title="第一章 健康管理概述"><b>2.1.</b>第一章 健康管理概述</a></li>
+<li class="chapter" data-level="2.2" data-path="02.html"><a href="02.html" title="第二章 临床医学基础知识"><b>2.2.</b>第二章 临床医学基础知识</a></li>
+<li class="chapter" data-level="2.3" data-path="03.html"><a href="03.html" title="第三章 预防医学基础知识"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="04.html"><a href="04.html" title="第四章 常见慢性病"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="05.html"><a href="05.html" title="第五章 流行病学和医学统计学基本知识"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="06.html"><a href="06.html" title="第六章 健康教育学"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="07.html"><a href="07.html" title="第七章 营养与食品安全"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter active" data-level="2.8" data-path="08.html"><a href="08.html" title="第八章 身体活动基本知识"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="09.html"><a href="09.html" title="第九章 心理健康"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="10.html"><a href="10.html" title="第十章 中医养生学基础知识"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="11.html"><a href="11.html" title="第十一章 康复医学基础知识"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="12.html"><a href="12.html" title="第十二章 健康信息学"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="13.html"><a href="13.html" title="第十三章 医学伦理与职业道德"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="14.html"><a href="14.html" title="第十四章 健康保险与健康管理"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="15.html"><a href="15.html" title="第十五章 健康管理服务营销"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="16.html"><a href="16.html" title="第十六章 健康管理相关法律、法规知识"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header" title="专业技能">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="../专业技能/01.html"><a href="../专业技能/01.html" title="第一章 健康监测"><b>3.1.</b>第一章 健康监测</a></li>
+<li class="chapter" data-level="3.2" data-path="../专业技能/02.html"><a href="../专业技能/02.html" title="第二章 健康风险评估与分析"><b>3.2.</b>第二章 健康风险评估与分析</a></li>
+<li class="chapter" data-level="3.3" data-path="../专业技能/03.html"><a href="../专业技能/03.html" title="第三章 健康指导"><b>3.3.</b>第三章 健康指导</a></li>
+<li class="chapter" data-level="3.4" data-path="../专业技能/04.html"><a href="../专业技能/04.html" title="第四章 健康危险因素干预"><b>3.4.</b>第四章 健康危险因素干预</a></li></ul>
             <li class="divider"></li>
             <li>
                 <a class="lsbook-link" href="https://github.com/liushilive/lsbook" target="blank">
